# TH-Valley

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  BonusPoints.md  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  bonuspoint.md
assets/dialogue/: Sebastian.json  npc.json
assets/maps/: Bar.tmx  Barn.tmx  Beach.tmx  Cave.tmx  Farm.tmx  FarmHouse.tmx  House.tmx  House.tsx  NPC.tmx  NPC2.tmx  NPC3.tmx  NPC4.tmx  Paths.tsx  Ranch.tmx  Shop.tmx  Town.tmx  desktop.ini  extra_tiles.tsx  interact.tsx  outdoor.tsx  spring_town.tsx  test.tmx  test.tsx  test2.tmx  untitled tile sheet.tsx  v16_Outdoors2.tsx  未命令.tsx
docs/: DESIGN.md
include/: Animals.h  Crops.h  CropsInformationScene.h  agriculture.h  bag.h  bag_gui.h  farm_tool_map.h  map.h  position.h  shop.h  talk_box.h  tool_bar.h  weather.h
include/avatar/: avatar.h  avatar_application.h  avatar_scene.h  bag.h  illustratedguide.h  npc.h
include/avatar_ui/: fui_scene.h  mui_scene.h  ui_application.h
include/client/: client_application.h  client_controller.h  network_client.h
include/creature/: creature.h
include/frontend/: bag_gui.h  game_scene.h  talk_box.h  title_screen.h  tool_bar.h
include/game/: NPC.h  agriculture.h  animals.h  avatar.h  bag.h  citizen.h  crop_production.h  crops.h  entity.h  entity_data.h  farm_house.h  map_controller.h  pig.h  tiled_map.h  vegetables.h  weather.h  worldtime.h
include/sample/: agriculture.h  sample_application.h  sample_scene.h  weather.h  worldtime.h
include/server/: server.h  session.h  session_manager.h  universe_server.h
include/utility/: logger.h  position.h
licenses/: LICENSE_CCControlExtension.txt  LICENSE_cocos2d-iphone.txt  LICENSE_lua.txt
src/: CropsInformationScene.cpp  agriculture.cpp  bag.cpp  bag_gui.cpp  farm_tool_map.cpp  main.cpp  map.cpp  map_animal.cpp  map_crop.cpp  talk_box.cpp  tool_bar.cpp  weather.cpp  worldtime.cpp
src/avatar/: avatar.cpp  avatar_application.cpp  avatar_scene.cpp  bag.cpp  illustratedguide.cpp  npc.cpp
src/avatar_ui/: fui_scene.cpp  mui_scene.cpp  ui_application.cpp
src/client/: client_application.cpp  client_controller.cpp  network_client.cpp
src/creature/: creature.cpp
src/frontend/: bag_gui.cpp  game_scene.cpp  map_animal.cpp  map_citizen.cpp  map_crop.cpp  talk_box.cpp  title_screen.cpp  tool_bar.cpp
src/game/: animals.cpp  avatar.cpp  bag.cpp  citizen.cpp  crop_production.cpp  crops.cpp  entity.cpp  entity_data.cpp  farm_house.cpp  map_controller.cpp  tiled_map.cpp  vegetables.cpp  weather.cpp  worldtime.cpp
src/sample/: sample_application.cpp  sample_scene.cpp
src/server/: server.cpp  session.cpp  session_manager.cpp  universe_server.cpp
src/utility/: logger.cpp
tests/bag_gui/: bag_gui_tests.cpp
tests/frontend/: talk_box_tests.cpp  title_screen_tests.cpp
tests/sample/: sample_application_tests.cpp
tests/server/: communication_tests.cpp  session_tests.cpp
tests/talk_box/: talk_box_tests.cpp
tests/tool_bar/: tool_bar_tests.cpp
tests/utility/: logger_tests.cpp
